--- a/styles.css
+++ b/styles.css
@@ -2,29 +2,83 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    background: black;
+    /* background: rgba(0, 0, 0, 0.94); */
     /* border: 1px solid white; */
-    color: white;
+    color: rgb(0, 0, 0);
     font-family: 'IBM Plex Mono', monospace;
 }
 
-header {
-    border: 1px solid rgb(17, 0, 255);
+span {
+    width: 200px;
     height: 100px;
-    display: grid;
-    place-content: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    border-radius: 10px;
+    margin-left: 50px;
+    font-size: 26px;
+    background-color: transparent;
+    position: relative;
+}
+
+span img {
+    position: absolute;
+    width: 80%;
+    background-color: transparent;
+    top: -70px;
+}
+
+.xiomiau {
+    width: 0;
+    overflow: hidden;
+    white-space: nowrap;
+    font-size: 2rem;
+    margin: 0 auto;
+    font-family: "Courier New";
+    border-right: 0.15em solid #18bdec;
+    animation: typing 3s steps(5) 1s 1 normal both infinite, blink 1s steps(1) infinite;
+  }
+  
+  @keyframes typing {
+    from {
+      width: 0;
+    }
+    to {
+      width: 100%;
+    }
+  }
+  
+  @keyframes blink {
+    50% {
+      border-color: transparent;
+    }
+  }
+    
+header {
+    margin-top: 70px;
+    /* background-color: hsla(203, 77%, 90%, 0.52); */
+    height: fit-content;
+    display: flex;
+    align-items: center;
+    box-shadow: 7px -6px 30px 2px rgba(140,188,235,0.75);
+}
+
+header:hover {
+    box-shadow: 7px 8px 30px 2px rgba(140,188,235,0.75);
+
 }
 
 nav {
     width: 100%;
-    border: 1px solid rgb(231, 57, 57);
-
-}
-
-ul {
-    border: 1px solid green;
     display: flex;
-    justify-content:space-around;
+    justify-content: center;
+    background-color: transparent;
+}
+ul {
+    width: 50%;
+    display: flex;
+    justify-content: space-evenly;
 }
 
 li {
