--- a/styles.css
+++ b/styles.css
@@ -2,10 +2,15 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    /* background: rgba(0, 0, 0, 0.94); */
-    /* border: 1px solid white; */
-    color: rgb(0, 0, 0);
-    font-family: 'IBM Plex Mono', monospace;
+    color: rgba(140,188,235,0.75);
+}
+
+body {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: #0F1624;
 }
 
 span {
@@ -35,9 +40,8 @@ span img {
     white-space: nowrap;
     font-size: 2rem;
     margin: 0 auto;
-    font-family: "Courier New";
-    border-right: 0.15em solid #18bdec;
-    animation: typing 3s steps(5) 1s 1 normal both infinite, blink 1s steps(1) infinite;
+    border-right: 3px solid #18bdec;
+    animation: typing 2s steps(10) 600ms 1 normal both, blink 1s steps(1) infinite;
   }
   
   @keyframes typing {
@@ -50,18 +54,20 @@ span img {
   }
   
   @keyframes blink {
-    50% {
+    30% {
       border-color: transparent;
     }
   }
     
 header {
+    width: 90%;
     margin-top: 70px;
     /* background-color: hsla(203, 77%, 90%, 0.52); */
     height: fit-content;
     display: flex;
     align-items: center;
     box-shadow: 7px -6px 30px 2px rgba(140,188,235,0.75);
+    border-radius: 20px 0 20px;
 }
 
 header:hover {
@@ -88,4 +94,8 @@ li {
 
 li a {
     text-decoration: none;
+}
+
+·my-name-is {
+  /* font-family: 'Source Sans Pro', sans-serif;   */
 }
